--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Jwt": {
+    "SecretKey": "nbryn",
+    "Issuer": "https://localhost:5000/",
+    "Audience": "https://localhost:5000/"
+    },
   "AllowedHosts": "*"
 }
