--- a/appsettings.json
+++ b/appsettings.json
@@ -7,9 +7,7 @@
     }
   },
   "Jwt": {
-    "SecretKey": "nbryn",
-    "Issuer": "https://localhost:5000/",
-    "Audience": "https://localhost:5000/"
+    "SecretKey": "nbrynverysecretkey123"
     },
   "AllowedHosts": "*"
 }
