--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Jwt": {
+    "SecretKey": "nbrynverysecretkey123"
+  },
+  "AllowedHosts": "*"
 }
