--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/validator": "^13.1.0",
     "axios": "^0.21.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
+    "validate.js": "^0.13.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
