--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/validator": "^13.1.0",
+    "@types/yup": "^0.29.9",
     "axios": "^0.21.0",
+    "formik": "^2.2.5",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "material-table": "^1.69.2",
@@ -25,8 +27,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
-    "validate.js": "^0.13.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
