SQLite -> SQLServer & migrations & docker

--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -9,5 +9,8 @@
   "Jwt": {
     "SecretKey": "nbrynverysecretkey123"
   },
+  "ConnectionStrings": {
+    "development": "Server=localhost;Database=master;User=sa;Password=Secret_paSS123;"
+  },
   "AllowedHosts": "*"
 }
