--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -10,7 +10,8 @@
     "SecretKey": "nbrynverysecretkey123"
   },
   "ConnectionStrings": {
-    "development": "Server=localhost;Database=master;User=sa;Password=Secret_paSS123;"
+    "development": "Server=localhost;Database=master;User=sa;Password=Secret_paSS123;",
+    "azure": "Server=tcp:club.database.windows.net,1433;Initial Catalog=CLup;Persist Security Info=False;User ID=nbryn;Password=Pjuske62;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
