--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,9 @@
    "name": "clup",
    "version": "0.1.0",
    "engines": {
-    "npm": "6.12.0",
-    "node": "10.0"
- },
+      "npm": "6.12.0",
+      "node": "10.0"
+   },
    "dependencies": {
       "@material-ui/core": "^4.11.0",
       "@material-ui/icons": "^4.9.1",
@@ -20,6 +20,7 @@
       "@types/validator": "^13.1.0",
       "@types/yup": "^0.29.9",
       "axios": "^0.21.0",
+      "dotenv": "^8.2.0",
       "formik": "^2.2.5",
       "js-cookie": "^2.2.1",
       "lodash": "^4.17.20",
