--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
       "@testing-library/user-event": "^12.1.10",
       "@types/jest": "^26.0.15",
       "@types/js-cookie": "^2.2.6",
+      "@types/lodash": "^4.14.167",
+      "@types/lodash-es": "^4.17.4",
       "@types/node": "^12.0.0",
       "@types/react": "^16.9.56",
       "@types/react-dom": "^16.9.8",
@@ -24,7 +26,7 @@
       "dotenv": "^8.2.0",
       "formik": "^2.2.5",
       "js-cookie": "^2.2.1",
-      "lodash": "^4.17.20",
+      "lodash-es": "^4.17.20",
       "material-table": "^1.69.2",
       "react": "^17.0.1",
       "react-bootstrap": "^1.4.0",
