--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
       "js-cookie": "^2.2.1",
       "lodash-es": "^4.17.20",
       "material-table": "^1.69.2",
+      "moment": "^2.29.1",
       "react": "^17.0.1",
       "react-bootstrap": "^1.4.0",
       "react-dom": "^17.0.1",
