Started implementing map functionality

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
       "@testing-library/jest-dom": "^5.11.4",
       "@testing-library/react": "^11.1.0",
       "@testing-library/user-event": "^12.1.10",
+      "@tippyjs/react": "^4.2.0",
       "@types/jest": "^26.0.15",
       "@types/js-cookie": "^2.2.6",
       "@types/lodash": "^4.14.167",
@@ -29,6 +30,7 @@
       "lodash-es": "^4.17.20",
       "material-table": "^1.69.2",
       "moment": "^2.29.1",
+      "pigeon-maps": "^0.17.0",
       "react": "^17.0.1",
       "react-bootstrap": "^1.4.0",
       "react-dom": "^17.0.1",
