--- a/server/Properties/launchSettings.json
+++ b/server/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "Customers Lineup",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000;http://clup-api.azurewebsites.com",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
