--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
       "@material-ui/core": "^4.11.0",
       "@material-ui/icons": "^4.9.1",
       "@material-ui/lab": "^4.0.0-alpha.57",
+      "@react-hook/window-scroll": "^1.3.0",
       "@reduxjs/toolkit": "^1.6.0",
       "@testing-library/jest-dom": "^5.11.4",
       "@testing-library/react": "^11.1.0",
