--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,11 @@ services:
 
   server:
     container_name: clup_server
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     build:
-      context: src/CLup.WebUI
-      dockerfile: Dockerfile
-    volumes:
-      - ./server/CLup:/app
-    command: ["dotnet", "watch", "run"]
+      context: ./src
+      dockerfile: CLup.API/Dockerfile
     ports:
       - "5001:5001"
     restart: always
@@ -27,13 +26,8 @@ services:
   client:
     container_name: clup_client
     build:
-      context: src/CLup.WebUI/Client
+      context: ./src/CLup.WebUI
       dockerfile: Dockerfile
-    environment:
-      CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - /app/node_modules
-      - ./client:/app
     ports:
       - "3000:3000"
     restart: always
@@ -41,4 +35,3 @@ services:
       - server
     links:
       - server
-
