Finished integration tests setup and implemented first test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ version: "3.4"
 services:
   db:
     container_name: clup_db
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    image: postgres
+    restart: always
     environment:
-      - "ACCEPT_EULA=Y"
-      - "SA_PASSWORD=Secret_paSS123"
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
-      - "1433:1433"
+      - '5432:5432'
 
   server:
     container_name: clup_server
