--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -11,9 +11,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
-        <PackageReference Include="Testcontainers.MsSql" Version="3.7.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.7.0" />
         <PackageReference Include="xunit" Version="2.4.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,6 +27,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\src\CLup.API\CLup.API.csproj" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="CLup.IntegrationTests\Tests\" />
     </ItemGroup>
 
 </Project>
