--- a/src/CLup.API/appsettings.json
+++ b/src/CLup.API/appsettings.json
@@ -7,10 +7,10 @@
         }
     },
     "Jwt": {
-        "SecretKey": "nbrynverysecretkey123"
+        "SecretKey": "nbrynverysecretkey123456789123456789"
     },
     "ConnectionStrings": {
-        "development": "Server=localhost;Database=master;User=sa;Password=Secret_paSS123;MultipleActiveResultSets=True"
+        "development": "User ID=postgres;Password=postgres;Server=127.0.0.1;Port=5432;Database=postgres;Pooling=true"
     },
     "AllowedHosts": "*"
 }
