--- a/src/CLup.API/CLup.API.csproj
+++ b/src/CLup.API/CLup.API.csproj
@@ -3,6 +3,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.11"/>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0"/>
@@ -15,5 +17,6 @@
     <ProjectReference Include="..\CLup.Infrastructure\CLup.Infrastructure.csproj"/>
     <ProjectReference Include="..\CLup.Domain\CLup.Domain.csproj"/>
   </ItemGroup>
+
 
 </Project>
