--- a/src/CLup.API/appsettings.json
+++ b/src/CLup.API/appsettings.json
@@ -1,16 +1,37 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
+  "Jwt": {
+    "SecretKey": "hejsaverysecretkey123456789123456789"
+  },
+  "ConnectionStrings": {
+    "development": "User ID=postgres;Password=postgres;Server=127.0.0.1;Port=5432;Database=postgres;Pooling=true"
+  },
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://clup-seq:5341"
         }
-    },
-    "Jwt": {
-        "SecretKey": "nbrynverysecretkey123456789123456789"
-    },
-    "ConnectionStrings": {
-        "development": "User ID=postgres;Password=postgres;Server=127.0.0.1;Port=5432;Database=postgres;Pooling=true"
-    },
-    "AllowedHosts": "*"
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  }
 }
