--- a/src/CLup.API/appsettings.json
+++ b/src/CLup.API/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Jwt": {
-    "SecretKey": "hejsaverysecretkey123456789123456789"
-  },
-  "ConnectionStrings": {
-    "development": "User ID=postgres;Password=postgres;Server=127.0.0.1;Port=5432;Database=postgres;Pooling=true"
+  "Settings": {
+    "JwtSecretKey": "hejsaverysecretkey123456789123456789",
+    "Url": "http://localhost:5001",
+    "ConnectionStrings": {
+      "development": "User ID=postgres;Password=postgres;Server=127.0.0.1;Port=5432;Database=postgres;Pooling=true"
+    }
   },
   "AllowedHosts": "*",
   "Serilog": {
