--- a/src/CLup.WebUI/.eslintrc
+++ b/src/CLup.WebUI/.eslintrc
@@ -8,6 +8,8 @@
         "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "@typescript-eslint/ban-ts-ignore": "off"
+        "@typescript-eslint/ban-ts-ignore": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/consistent-type-imports": "error"
     }
 }
