--- a/src/CLup.WebUI/package.json
+++ b/src/CLup.WebUI/package.json
@@ -1,16 +1,19 @@
 {
    "name": "clup",
-   "version": "0.1.0",
+   "version": "1.0.0",
    "engines": {
-      "npm": "6.12.0",
-      "node": "10.0"
+      "npm": "8.19.2",
+      "node": "16.18.0"
    },
    "dependencies": {
-      "@material-ui/core": "^4.11.0",
-      "@material-ui/icons": "^4.9.1",
-      "@material-ui/lab": "^4.0.0-alpha.57",
+      "@emotion/react": "^11.11.4",
+      "@emotion/styled": "^11.11.0",
+      "@mui/icons-material": "^5.15.13",
+      "@mui/lab": "^5.0.0-alpha.168",
+      "@mui/material": "^5.15.13",
+      "@mui/styles": "^5.15.13",
       "@react-hook/window-scroll": "^1.3.0",
-      "@reduxjs/toolkit": "^1.6.0",
+      "@reduxjs/toolkit": "^2.2.1",
       "@testing-library/jest-dom": "^5.11.4",
       "@testing-library/react": "^11.1.0",
       "@testing-library/user-event": "^12.1.10",
@@ -25,7 +28,7 @@
       "@types/react-router-dom": "^5.1.6",
       "@types/validator": "^13.1.0",
       "@types/yup": "^0.29.9",
-      "axios": "^0.21.0",
+      "axios": "^1.6.8",
       "dotenv": "^8.2.0",
       "formik": "^2.2.5",
       "js-cookie": "^2.2.1",
@@ -34,13 +37,13 @@
       "moment": "^2.29.1",
       "normalizr": "^3.6.1",
       "pigeon-maps": "^0.17.0",
-      "react": "^17.0.1",
+      "react": "^18.2.0",
       "react-bootstrap": "^1.4.0",
-      "react-dom": "^17.0.1",
+      "react-dom": "^18.2.0",
       "react-redux": "^7.2.4",
       "react-router-dom": "^5.2.0",
-      "react-scripts": "4.0.0",
-      "typescript": "^4.0.3",
+      "react-scripts": "^5.0.1",
+      "typescript": "^5.4.2",
       "web-vitals": "^0.2.4",
       "yup": "^0.31.0"
    },
@@ -49,7 +52,8 @@
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
-      "lint": "eslint . --ext .ts"
+      "lint": "eslint . --ext .ts",
+      "dependency-test": "npx madge --circular --extensions ts ./src"
    },
    "eslintConfig": {
       "extends": [
@@ -70,9 +74,9 @@
       ]
    },
    "devDependencies": {
-      "@typescript-eslint/eslint-plugin": "^4.8.1",
-      "@typescript-eslint/parser": "^4.8.1",
-      "eslint": "^7.13.0",
+      "@typescript-eslint/eslint-plugin": "^7.2.0",
+      "@typescript-eslint/parser": "^7.2.0",
+      "eslint": "^8.57.0",
       "prettier": "^2.1.2"
    }
 }
