--- a/src/CLup.WebUI/package.json
+++ b/src/CLup.WebUI/package.json
@@ -23,17 +23,18 @@
       "@types/lodash": "^4.14.167",
       "@types/lodash-es": "^4.17.4",
       "@types/node": "^12.0.0",
-      "@types/react": "^16.9.56",
-      "@types/react-dom": "^16.9.8",
+      "@types/react": "^18.2.67",
+      "@types/react-dom": "^18.2.22",
       "@types/react-router-dom": "^5.1.6",
       "@types/validator": "^13.1.0",
       "@types/yup": "^0.29.9",
       "axios": "^1.6.8",
+      "classnames": "^2.5.1",
       "dotenv": "^8.2.0",
       "formik": "^2.2.5",
       "js-cookie": "^2.2.1",
       "lodash-es": "^4.17.20",
-      "material-table": "^1.69.2",
+      "material-table": "^2.0.5",
       "moment": "^2.29.1",
       "normalizr": "^3.6.1",
       "pigeon-maps": "^0.17.0",
