--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -19,6 +19,29 @@ jobs:
         with:
           submodules: true
           lfs: false
+
+      # Set up Node.js environment
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16" # Specify the Node.js version you want to use
+
+      # Install dependencies using npm
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./src/CLup.WebUI # Adjust this to your project's directory
+
+      # Build the project using npm
+      - name: Build the project
+        run: npm run build
+        working-directory: ./src/CLup.WebUI # Adjust this to your project's directory
+
+      # Test the project using npm
+      - name: Run tests
+        run: npm test
+        working-directory: ./src/CLup.WebUI 
+
+      # Proceed to deploy the app to Azure Static Web Apps
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -26,9 +49,9 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KIND_DUNE_01C004403 }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/src/CLup.WebUI"
+          app_location: "/src/CLup.WebUI" # This should point to the location where your built files are. Adjust if necessary.
           api_location: ""
-          output_location: "build"
+          output_location: "build" # Ensure this matches the output directory specified in your build script
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
