CI/CD: Updated GitHub workflows

--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Test the project using npm
       - name: Run tests
-        run: npm test
+        run: npm test --passWithNoTests
         working-directory: ./src/CLup.WebUI 
 
       # Proceed to deploy the app to Azure Static Web Apps
