CI/CD: Updated GitHub workflows

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -51,13 +51,13 @@ jobs:
         run: dotnet restore
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build CustomersLineup.sln  --configuration Release --no-restore
 
       - name: Run tests
         run: dotnet test --no-restore --verbosity normal
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ./publish_output --no-restore
+        run: dotnet publish src/CLup.API/CLup.API.csproj -c Release -o ${{ env.AZURE_WEBAPP_PACKAGE_PATH }} --no-restore
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
