--- a/src/CLup.Infrastructure/CLup.Infrastructure.csproj
+++ b/src/CLup.Infrastructure/CLup.Infrastructure.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0"/>
   </ItemGroup>
 
