CI/CD: Updated GitHub workflows

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,6 +1,5 @@
 name: Deploy Backend
 
-
 env:
   AZURE_WEBAPP_NAME: customers-lineup
   AZURE_WEBAPP_PACKAGE_PATH: "./publish_output"
@@ -72,5 +71,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ./customers-lineup/customers-lineup
+          with:
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
