--- a/src/CLup.API/CLup.API.csproj
+++ b/src/CLup.API/CLup.API.csproj
@@ -2,9 +2,11 @@
 
   <ItemGroup>
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.11"/>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0"/>
