--- a/src/CLup.WebUI/Dockerfile
+++ b/src/CLup.WebUI/Dockerfile
@@ -1,10 +1,14 @@
-# build environment
-FROM node:13.12.0-alpine as build
+FROM node:16.18.0-alpine as build
+
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install
-COPY . ./
+
+COPY ./src/CLup.WebUI/package.json ./
+COPY ./src/CLup.WebUI/package-lock.json ./
+
+RUN npm ci --legacy-peer-deps
+
+COPY ./src/CLup.WebUI ./
+
 EXPOSE 3000
 CMD ["npm","start"]
