--- a/src/CLup.API/appsettings.json
+++ b/src/CLup.API/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Settings": {
     "JwtSecretKey": "hejsaverysecretkey123456789123456789",
-    "Url": "http://0.0.0.0:5001",
+    "Url": "http://localhost:5001",
     "ConnectionStrings": {
-      "development": "User ID=postgres;Password=postgres;Server=clup-postgres;Port=5432;Database=postgres;Pooling=true"
+      "Development": "User ID=postgres;Password=postgres;Server=127.0.0.1;Port=5432;Database=postgres;Pooling=true"
     }
   },
   "AllowedHosts": "*",
